@@ -28,6 +28,7 @@ import java.nio.file.Path;
 import java.util.Collection;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.SequencedSet;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.stream.Stream;
@@ -55,7 +56,7 @@ import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
 import org.sosy_lab.java_smt.api.BooleanFormula;
 
 /**
- * This class allows to export the information of abstract states as SMT-formula. Therefore we
+ * This class allows to export the information of abstract states as SMT-formula. Therefore, we
  * filter the abstract states for matching {@link FormulaReportingState}s and retrieve the formula
  * from there. Then we export the formulas in a fixed line-based format, which allows re-usage with
  * a further predicate analysis.
@@ -79,7 +80,7 @@ public class StateToFormulaWriter implements StatisticsProvider {
       secure = true,
       description =
           "instead of writing the exact state-representation as a single formula, write its atoms"
-              + " as a list of formulas. Therefore we ignore operators for conjunction and"
+              + " as a list of formulas. Therefore, we ignore operators for conjunction and"
               + " disjunction.")
   private FormulaSplitter splitFormulas = FormulaSplitter.LOCATION;
 
@@ -196,7 +197,7 @@ public class StateToFormulaWriter implements StatisticsProvider {
       throws IOException {
 
     // (global) definitions used for predicates
-    final Set<String> definitions = new LinkedHashSet<>();
+    final SequencedSet<String> definitions = new LinkedHashSet<>();
 
     // in this set, we collect the string representing each predicate
     // (potentially making use of the above definitions)
@@ -228,7 +229,6 @@ public class StateToFormulaWriter implements StatisticsProvider {
       case ATOM ->
           // atomize formulas
           formulas = formulas.flatMap(f -> fmgr.extractAtoms(f, false).stream());
-      default -> throw new AssertionError("unknown option");
     }
 
     // filter out formulas with no information
@@ -248,7 +248,7 @@ public class StateToFormulaWriter implements StatisticsProvider {
     List<String> lines = LINE_SPLITTER.splitToList(fmgr.dumpFormula(predicate).toString());
 
     // Get the predicate from the last line
-    String predString = lines.get(lines.size() - 1);
+    String predString = lines.getLast();
 
     // Check that the dump format is correct
     if (!(predString.startsWith("(assert ") && predString.endsWith(")"))) {
